--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vue-clipboard3": "^1.0.1"
   },
   "scripts": {
-    "postinstall": "node post-install.js",
+    "postinstall": "node postinstall.js",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:build-mpa": "vitepress build --mpa docs #gens static .html with no js, but broken now",
