--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@servicestack/client": "^1.0.55",
     "autoprefixer": "^10.3.7",
+    "gray-matter": "^4.0.3",
     "markdown-it-container": "^3.0.0",
     "postcss": "^8.3.9",
     "tailwindcss": "^2.2.17",
@@ -15,7 +16,7 @@
   "scripts": {
     "postinstall": "node postinstall.js",
     "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
+    "docs:build": "vitepress build docs && node docs-meta.js",
     "docs:build-mpa": "vitepress build --mpa docs #gens static .html with no js, but broken now",
     "docs:serve": "vitepress serve docs"
   },
