--- a/search-server/typesense-scraper/typesense-scraper-config.json
+++ b/search-server/typesense-scraper/typesense-scraper-config.json
@@ -1,12 +1,12 @@
 {
   "index_name": "typesense_docs",
-  "allowed_domains": ["172.17.0.2"],
+  "allowed_domains": ["172.17.0.2","docs.servicestack.net"],
   "start_urls": [
     {
-      "url": "http://172.17.0.2:8080/"
+      "url": "https://docs.servicestack.net/"
     }
   ],
-  "stop_urls": ["http://172.17.0.2:8080/releases/"],
+  "stop_urls": ["https://docs.servicestack.net/releases/"],
   "selectors": {
     "default": {
       "lvl0": ".content h1",
