fix lvl0 h1 typesense matcher

--- a/search-server/typesense-scraper/typesense-scraper-config.json
+++ b/search-server/typesense-scraper/typesense-scraper-config.json
@@ -9,7 +9,7 @@
   "stop_urls": ["https://docs.servicestack.net/release*"],
   "selectors": {
     "default": {
-      "lvl0": ".content h1",
+      "lvl0": ".page h1",
       "lvl1": ".content h2",
       "lvl2": ".content h3",
       "lvl3": ".content h4",
