--- a/.github/workflows/search-index-update.yml
+++ b/.github/workflows/search-index-update.yml
@@ -4,7 +4,12 @@ on:
   schedule:
     # Run once a day
     - cron:  '10 0 * * *'
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      noop:
+        description: 'noop'
+        required: false
+        default: 'noop'
 
 jobs:
   build:
