Only run search index update if last commit has within last day.

--- a/.github/workflows/search-index-update.yml
+++ b/.github/workflows/search-index-update.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      run_update: ${{ steps.date_check.outputs.run-update }}
     steps:
     - uses: actions/checkout@v1
     - name: Setup node
@@ -21,7 +23,14 @@ jobs:
       with:
         node-version: 14
 
+    - name: Check commit date
+    - id: date_check
+      run: |
+        chmod +x ./search-server/commit-date-check.sh
+        echo "$(./search-server/commit-date-check.sh)"
+        echo "::set-output name=run_update::$(./search-server/commit-date-check.sh)\n"
     - name: Create search index
+      if: ${{ steps.date_check.outputs.run-update == 'update' }}
       run: |
         echo "TYPESENSE_API_KEY=${{ secrets.TYPESENSE_API_KEY }}" >> $GITHUB_ENV
         export TYPESENSE_API_KEY=${{ secrets.TYPESENSE_API_KEY }}
@@ -35,9 +44,11 @@ jobs:
         curl 'http://172.17.0.2:8108/keys' -X POST -H "X-TYPESENSE-API-KEY: ${TYPESENSE_API_KEY}" -H 'Content-Type: application/json' -d '{"value": "N4N8bF0XwyvzwCGwm3CKB0QcnwyWtygo","description": "Search only","actions": ["documents:search"],"collections":["*"]}'
 
     - name: repository name fix
+      if: ${{ steps.date_check.outputs.run-update == 'update' }}
       run: echo "image_repository_name=docs-search" >> $GITHUB_ENV
 
     - name: Configure AWS credentials
+      if: ${{ steps.date_check.outputs.run-update == 'update' }}
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -45,10 +56,12 @@ jobs:
         aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Login to Amazon ECR
+      if: ${{ steps.date_check.outputs.run-update == 'update' }}
       id: login_ecr
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build and push to ECR
+      if: ${{ steps.date_check.outputs.run-update == 'update' }}
       id: push_image_to_ecr
       uses: docker/build-push-action@v2.2.2
       with:
@@ -87,6 +100,7 @@ jobs:
           echo "typesense_api_key=${{ secrets.TYPESENSE_API_KEY }}" >> $GITHUB_ENV
 
       - name: Populate task definition template
+        if: ${{ needs.build.outputs.run_update == 'update' }}
         uses: danielr1996/envsubst-action@1.0.0
         env:
           RELEASE_VERSION: latest
@@ -102,12 +116,15 @@ jobs:
           output: task-definition.json
 
       - name: Create task definition if doesn't exist
+        if: ${{ needs.build.outputs.run_update == 'update' }}
         run: aws ecs describe-task-definition --task-definition ${{ env.app_name }} || aws ecs register-task-definition --cli-input-json file://task-definition.json
 
       - name: Create ECS Service if not exists.
+        if: ${{ needs.build.outputs.run_update == 'update' }}
         run: aws ecs describe-services --cluster ${{ env.cluster_name }} --services ${{ env.app_name }} | jq '.services[0]' -e || aws ecs create-service --cluster ${{ env.cluster_name }} --service-name ${{ env.app_name }} --task-definition ${{ env.app_name }} --desired-count 1
 
       - name: Deploy new revision of the task definition
+        if: ${{ needs.build.outputs.run_update == 'update' }}
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: task-definition.json
