--- a/.github/workflows/search-index-update.yml
+++ b/.github/workflows/search-index-update.yml
@@ -30,21 +30,22 @@ jobs:
           echo "$(./search-server/commit-date-check.sh)"
           echo "::set-output name=run_update::$(./search-server/commit-date-check.sh)\n"
 
-      uses: actions/github-script@v2
-      id: check
-      with:
-        script: |
-          const { owner, repo } = context.repo
-          const update = "${{ steps.date_check.outputs.run-update == 'update' }}"
-          if (!update) {
-            console.log('Cancelling ...');
-            const run_id = "${{ github.run_id }}";
-            await github.actions.cancelWorkflowRun({ owner, repo, run_id });
-            return 'stop'
-          } else {
-            return 'build'
-          }
-        result-encoding: string
+      - name: GH script check
+        uses: actions/github-script@v2
+        id: check
+        with:
+          script: |
+            const { owner, repo } = context.repo
+            const update = "${{ steps.date_check.outputs.run-update == 'update' }}"
+            if (!update) {
+              console.log('Cancelling ...');
+              const run_id = "${{ github.run_id }}";
+              await github.actions.cancelWorkflowRun({ owner, repo, run_id });
+              return 'stop'
+            } else {
+              return 'build'
+            }
+          result-encoding: string
 
       - name: Waiting for cancellation
         run: sleep 60
