--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@iconify/vue": "^3.1.2",
     "@servicestack/client": "^1.0.55",
     "autoprefixer": "^10.3.7",
     "gray-matter": "^4.0.3",
     "markdown-it-container": "^3.0.0",
     "postcss": "^8.3.9",
-    "tailwindcss": "^2.2.17",
+    "tailwindcss": "^3.0.15",
     "vitepress": "^0.20.0",
     "vue-clipboard3": "^1.0.1"
   },
