Try fix search for Redis.

--- a/search-server/typesense-scraper/typesense-scraper-config.json
+++ b/search-server/typesense-scraper/typesense-scraper-config.json
@@ -4,6 +4,9 @@
   "start_urls": [
     {
       "url": "https://docs.servicestack.net/"
+    },
+    {
+      "url": "https://docs.servicestack.net/redis/"
     }
   ],
   "stop_urls": ["https://docs.servicestack.net/release*"],
