Make sure typesense indexes ormlite docs.

--- a/search-server/typesense-scraper/typesense-scraper-config.json
+++ b/search-server/typesense-scraper/typesense-scraper-config.json
@@ -7,6 +7,9 @@
     },
     {
       "url": "https://docs.servicestack.net/redis/"
+    },
+    {
+      "url": "https://docs.servicestack.net/ormlite/"
     }
   ],
   "stop_urls": ["https://docs.servicestack.net/release*"],
