--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
           cd docs/.vitepress/dist
           git init
           git add -A
+          git config --global --add safe.directory /github/workspace/docs/.vitepress/dist
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -m 'deploy'
