--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Deploy to GitHub Pages
         run: |
           cd docs/.vitepress/dist
+          git config --global --add safe.directory /github/workspace/docs/.vitepress/dist
           git init
           git add -A
-          git config --global --add safe.directory /github/workspace/docs/.vitepress/dist
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git commit -m 'deploy'
+          git commit -m 'deploy'2
       - name: Force push to destination branch
         uses: ad-m/github-push-action@v0.5.0
         with:
