--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,9 @@ jobs:
           git commit -m 'deploy'2
       - name: Force push to destination branch
         uses: ad-m/github-push-action@v0.5.0
+        run: |
+          git config --global --add safe.directory /github/workspace/docs/.vitepress/dist
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
