--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,30 +11,29 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Deploy to GitHub Pages
+      - name: Clear dist folder
         run: |
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          rm -rf docs/.vitepress/dist/
+      - name: Install and build
+        run: |
           npm install
           npm run docs:build
+      - name: Copy release files for permalinks
+        run: |
           cp docs/.vitepress/cp-rename.sh docs/.vitepress/dist/releases/cp-rename.sh
           cd docs/.vitepress/dist/releases
           chmod +x ./cp-rename.sh
           ./cp-rename.sh
           ls -l
-          cd ../../../..
-          cd docs/.vitepress/dist
-          git init
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add -A
-          git commit -m 'deploy'2
-      - name: Force push to destination branch
-        uses: ad-m/github-push-action@v0.5.0
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          force: true
-          directory: ./docs/.vitepress/dist
+          publish_dir: ./docs/.vitepress/dist
+          user_name: 'GitHub Action'
+          user_email: 'action@github.com'
+
