--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "gray-matter": "^4.0.3",
     "markdown-it-container": "^3.0.0",
     "postcss": "^8.3.9",
-    "tailwindcss": "^3.0.15",
-    "vitepress": "^0.20.0",
+    "tailwindcss": "^3.0.24",
+    "vitepress": "^0.22.4",
     "vue-clipboard3": "^1.0.1"
   },
   "scripts": {
@@ -28,6 +28,8 @@
     }
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
     "glob": "^7.2.0",
     "sass": "^1.43.2"
   }
